--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -61,9 +61,12 @@ footer {
         }
 
         #company-info {
-            text-align: center;
-            @include desktop {
-                text-align: left;
+            .inner-div {
+                text-align: left !important;
+                a {
+                    display: block;
+                    margin-bottom: 2vw;
+                }
             }
         }
 
@@ -74,7 +77,7 @@ footer {
 
         .footer-title {
             color: color(mirage64);
-            text-align: center;
+            //text-align: center;
             font-size: 1.5rem;
             margin: 1vw 0 1vw;
             font-weight: 300;
