[ft #170866479] update online class images

--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -15,7 +15,7 @@ $monitor: 1192px;
 
 .service-image {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 5px;
     margin-bottom: 2rem;
     position: relative;
@@ -34,7 +34,6 @@ $monitor: 1192px;
         @include desktop {
             display: flex;
             margin-bottom: 12vw;
-            align-items: center;
 
             .text {
                 width: 75%;
